index.html update

--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
 	<title>Dr.Sangwan </title>
 	
 	<!-- Styles -->
-	<link rel='stylesheet' href='assets/css/bootstrap.min.css'>
-	<link rel='stylesheet' href='assets/css/animate.min.css'>
-	<link rel='stylesheet' href="assets/css/font-awesome.min.css"/>
-	<link rel='stylesheet' href="assets/css/style.css"/>
+	<link rel='stylesheet' href='https://sangwansahil.github.io/assets/css/bootstrap.min.css'>
+	<link rel='stylesheet' href='https://sangwansahil.github.io/assets/css/animate.min.css'>
+	<link rel='stylesheet' href="https://sangwansahil.github.io/assets/css/font-awesome.min.css"/>
+	<link rel='stylesheet' href="https://sangwansahil.github.io/assets/css/style.css"/>
 	
 	<!-- Fonts -->
 	<link href='http://fonts.googleapis.com/css?family=Raleway:200,300,400,500,600,700,800' rel='stylesheet' type='text/css'>
@@ -97,7 +97,7 @@
 <!-- About
 	================================================== -->
 <section class="whitecolor parallax section" id="about" style="background-color: #01b0d1;opacity:1;>
-<div class="wrapsection">
+ <div class="wrapsection">
 	<div class="container">
 	<div class="row">
 		<div class="col-md-12 sol-sm-12 about">
@@ -585,13 +585,13 @@
 <!-- Bootstrap core JavaScript
 	================================================== -->
 <!-- Placed at the end of the document so the pages load faster -->
-<script src="assets/js/jquery.min.js"></script>
-<script src="assets/js/bootstrap.min.js"></script>
-<script src="assets/js/waypoints.min.js"></script>
-<script src="assets/js/jquery.scrollTo.min.js"></script>
-<script src="assets/js/jquery.localScroll.min.js"></script>
-<script src="assets/js/jquery.magnific-popup.min.js"></script>
-<script src="assets/js/validate.js"></script>
-<script src="assets/js/common.js"></script>
+<script src="https://sangwansahil.github.io/assets/js/jquery.min.js"></script>
+<script src="https://sangwansahil.github.io/assets/js/bootstrap.min.js"></script>
+<script src="https://sangwansahil.github.io/assets/js/waypoints.min.js"></script>
+<script src="https://sangwansahil.github.io/assets/js/jquery.scrollTo.min.js"></script>
+<script src="https://sangwansahil.github.io/assets/js/jquery.localScroll.min.js"></script>
+<script src="https://sangwansahil.github.io/assets/js/jquery.magnific-popup.min.js"></script>
+<script src="https://sangwansahil.github.io/assets/js/validate.js"></script>
+<script src="https://sangwansahil.github.io/assets/js/common.js"></script>
 </body>
 </html>
