--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 	<link rel='stylesheet' href="https://sangwansahil.github.io/assets/css/style.css"/>
 	
 	<!-- Fonts -->
-	<link href='http://fonts.googleapis.com/css?family=Raleway:200,300,400,500,600,700,800' rel='stylesheet' type='text/css'>
+	<link href='//fonts.googleapis.com/css?family=Raleway:200,300,400,500,600,700,800' rel='stylesheet' type='text/css'>
 
 	<!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
 	<!--[if lt IE 9]>
