added achievement page

--- a/achievement.html
+++ b/achievement.html
@@ -84,12 +84,29 @@
 		<div class="row">
 			<div class="col-md-12 sol-sm-12">
 				<div class="maintitle">
-					<h3 class="section-title">About</h3>
+					<h3 class="section-title">Achievements</h3>
 					<p class="lead">
-						
-					Dr Virender Singh Sangwan has done his MS Ophthalmology from Maharshi Dayanand University, Haryana. He has completed his fellowship in Cornea & Anterior Segment at L V Prasad Eye Institute, and a fellowship in Immunology & Uveitis Services at Harvard Medical School, USA, before joining LVPEI. He has worked as a Field Medical Director at ORBIS International, Inc., New York, and Chief Fellow, Immunology & Uveitis service at Harvard Medical School, Boston. He is also an Adjunct Associate Professor of Ophthalmology, University of Rochester, New York, USA.
-
-					Dr Sangwan has received several prestigious awards including the Shanti Swaroop Bhatnagar Award 2006 and the Biotech Products and Process Development and Commercialization Award 2007 from the Government of India. He has published several papers in peer-reviewed journals, presented widely and served as faculty for workshops and instruction courses on uveitis, limbal stem cell deficiency and limbal stem cell transplantation, nationally and internationally. He is a reviewer for the Indian Journal of Ophthalmology, Cornea, Comprehensive Ophthalmology Update and Clinical & Experimental Ophthalmology. He is the founder secretary of the Asia Cornea Society and Vice-President, Uveitis Society of India. He is also founder secretary/ treasurer of Uveitis Society of India and the LVPEI Alumni Association.
+					1.	The 28th Asia-Pacific Academy of Ophthalmology Congress. APAO – AIOS 2013, January 17-20, 2013. HICC, HITEX, Hyderabad. “Best Paper in Cornea and External Disease”
+					<br>
+					2.Invited to join executive committee of International Kpro Society in BPEI, Miami, USA.
+					<br>
+					3. Virender S Sangwan named among <b>Top 25 scientists in India by India Today</b>, September 2011.
+					<br>
+					4. Indian Medical Association (IMA), Hyderabad City Diamond Jubilee Dr. R.M Saboo Oration on “Stem Cell Therapy – The Promise and the Potential” at Dr. Kiriloskar Hall, IMA Building, Sultan Bazar, Koti, Hyderabad held on 28th January 2012.
+					5. <b>‘Leadership in Uveitis’ award for Dr Virender S Sangwan. Organised by IOIS & USI in November 13 -16, 2011.</b> The award carries plaque and cash prize of US $ 20,000.
+					<br>
+					6. Best Original Cornea Paper of the day at 115th annual meeting of American Academy of Ophthalmology, Orlando, Fl, USA on October 22-25, 2011. Autologus Cultivated Limbal Epithelial Transplantation: A 10 Year Study.
+					<br>
+					7. Patnaik Oration at Shroff’s Charitable Eye Hospital, Mumbai for best free paper “Cell-based therapy for Ocular Surface reconstruction” held on 18 September 2011.
+					<br>
+					8. Award Lecture at Seventh Annual meeting of International Ocular Surface Society (IOSS) at Hollywood, FL, USA. “Cell-based Ocular Surface Reconstruction: Advandce and Gaps in Knowledge” on 30 April 2011.
+					<br>
+					9. “Karam Bhoomi Award” for Medical Sciences presented by Haryana Institute of Fine Arts (HIFA), Karnal, Haryana on March 13, 2011. The award was presented Hon’l Dr. Farooq Abdulla, Cabinet Minister, Government of India.
+					<br>
+					10. Shanti Lal Modi Oration Award” awarded by Ahmedabad Ophthalmology Society on 23rd January 2011 at Ahmedabad.
+					<br>
+					11. Fox Center for Vision Restoration Lecture: “INNOVATIONS IN VISION RESTORATION” The Louis J. Fox at UPMC Eye Center and the McGowan Institute for Regenerative Medicine on 15th October, 2010.
+					<br>
 					</p>
 				</div>
 			</div>
