--- a/achievement.html
+++ b/achievement.html
@@ -86,6 +86,7 @@
 				<div class="maintitle">
 					<h3 class="section-title">Achievements</h3>
 					<p class="lead">
+					<hr>
 					1.	The 28th Asia-Pacific Academy of Ophthalmology Congress. APAO – AIOS 2013, January 17-20, 2013. HICC, HITEX, Hyderabad. “Best Paper in Cornea and External Disease”
 					<hr>
 					2.Invited to join executive committee of International Kpro Society in BPEI, Miami, USA.
@@ -96,17 +97,43 @@
 					<hr>
 					5. <b>‘Leadership in Uveitis’ award for Dr Virender S Sangwan. Organised by IOIS & USI in November 13 -16, 2011.</b> The award carries plaque and cash prize of US $ 20,000.
 					<hr>
-					6. Best Original Cornea Paper of the day at 115th annual meeting of American Academy of Ophthalmology, Orlando, Fl, USA on October 22-25, 2011. Autologus Cultivated Limbal Epithelial Transplantation: A 10 Year Study.
+					6. <b>Best Original Cornea Paper of the day</b> at 115th annual meeting of American Academy of Ophthalmology, Orlando, Fl, USA on <b>October 22-25, 2011.</b> Autologus Cultivated Limbal Epithelial Transplantation: A 10 Year Study.
 					<hr>
-					7. Patnaik Oration at Shroff’s Charitable Eye Hospital, Mumbai for best free paper “Cell-based therapy for Ocular Surface reconstruction” held on 18 September 2011.
+					7. <b>Patnaik Oration</b> at Shroff’s Charitable Eye Hospital, Mumbai for best free paper “Cell-based therapy for Ocular Surface reconstruction” held on <b>18 September 2011.</b>
 					<hr>
-					8. Award Lecture at Seventh Annual meeting of International Ocular Surface Society (IOSS) at Hollywood, FL, USA. “Cell-based Ocular Surface Reconstruction: Advandce and Gaps in Knowledge” on 30 April 2011.
+					8.<b> Award Lecture at </b>Seventh Annual meeting of International Ocular Surface Society (IOSS) at Hollywood, FL, USA. “Cell-based Ocular Surface Reconstruction: Advandce and Gaps in Knowledge” on<b> 30 April 2011.</b>
 					<hr>
-					9. “Karam Bhoomi Award” for Medical Sciences presented by Haryana Institute of Fine Arts (HIFA), Karnal, Haryana on March 13, 2011. The award was presented Hon’l Dr. Farooq Abdulla, Cabinet Minister, Government of India.
+					9. <b>“Karam Bhoomi Award”</b> for Medical Sciences presented by Haryana Institute of Fine Arts (HIFA), Karnal, Haryana on <b>March 13, 2011</b>. The award was presented Hon’l Dr. Farooq Abdulla, Cabinet Minister, Government of India.
 					<hr>
-					10. Shanti Lal Modi Oration Award” awarded by Ahmedabad Ophthalmology Society on 23rd January 2011 at Ahmedabad.
+					10. <b>"Shanti Lal Modi Oration Award” </b>awarded by Ahmedabad Ophthalmology Society on <b>23rd January 2011</b> at Ahmedabad.
 					<hr>
-					11. Fox Center for Vision Restoration Lecture: “INNOVATIONS IN VISION RESTORATION” The Louis J. Fox at UPMC Eye Center and the McGowan Institute for Regenerative Medicine on 15th October, 2010.
+					11. Fox Center for Vision Restoration Lecture: <b>“INNOVATIONS IN VISION RESTORATION”</b> The Louis J. Fox at UPMC Eye Center and the McGowan Institute for Regenerative Medicine on <b>15th October, 2010.</b>
+					<hr>
+					12. <b>Prof Mahendra Mishra Oration Award:</b> Presented by Orissa State Ophthalmological society on <b>13 November 2010</b> presented by Hon’l Chief Minister, Sh Naveen Patnaik.
+					<hr>
+					13.<b> Raghavachari Award:</b> Best free paper “Long term outcomes of keratoplasty in patients with autologous cultivated stem cell transplantation following chemical injury” presented during 34th annual conference of A. P. State ophthalmological Society (APSOS) – 2010 held on <b>October 1-3, 2010.</b>
+					<hr>
+					14.<b> Certificate of Appreciation:</b> Sarojini Devi Eye Hospital, Regional Institute of Ophthalmology, Hyderabad 28th Annual CME Programme <b>2009.</b>
+					<hr>
+					15.<b> Arasthu Yarjug Memorial Oration Award: 17 January 2008</b>, Indian Medical Association, Hyderabad Spoke on Stem Cell for Ocular Diseases.
+					<hr>
+					16. <b>H .V. Desai Award:</b> Best work in Ocular Surface disorders, awarded on <b>20th April 2008</b> at H.V. Desai Eye Hospital, Pune.
+					<hr>
+					17.<b> A .V. Madangopal Oration Award:</b> Presented during Vidarbha Ophthalmological Society meeting,<b> 29th March 2008.</b> Spoke on Limbal Stem Cells: Science and Practice.
+					<hr>
+					18.<b> National Technology Award (shared): the Biotech Products and Process Development and Commercialisation Awards for the year 2007.</b> The award was given by president APJ Abdul Kallam, then President of India.
+					<hr>
+					19.<b> Shanti Swarup Bhatnagar Award:</b> work for stem cell transplantation, 2006. The awards presented by Prime Minister, Dr Manmohan Singh at a ceremony in Vighyan Bhawan.
+					<hr>
+					20. <b>P Siva Reddy:</b> researcher of the year in Andhra Pradesh (2002 – 2003).
+					<hr>
+					21.<b> Col Rangachary Award:</b> Best free paper presented during annual meeting of AIOS held in Bhubaneswar in <b>January 2005.</b>
+					<hr>
+					22.<b> K Vengal Rao Award</b>: Best paper in A.P State Ophthalmological Society <b>(APSOS) – 2002.</b>
+					<hr>
+					23. <b>Recipient of the Best Voluntary Blood Donor Award:</b> of the District for the year<b> 1990</b> (District Red Cross Society, Rohtak, India).
+					<hr>
+					24. Recipient of the college color for Basketball for the session <b>1985-86</b>.
 					<hr>
 					</p>
 				</div>
