--- a/achievement.html
+++ b/achievement.html
@@ -34,8 +34,7 @@
 </head>
 <body>
 <!-- Begin Hero Bg -->
-<div id="parallax">
-</div>
+
 <!-- End Hero Bg
 	================================================== -->
 <!-- Start Header
@@ -139,3 +138,16 @@
 				</div>
 			</div>
 		</div>
+		</div>
+		</div>
+		</section>
+		<script src="https://sangwansahil.github.io/assets/js/jquery.min.js"></script>
+<script src="https://sangwansahil.github.io/assets/js/bootstrap.min.js"></script>
+<script src="https://sangwansahil.github.io/assets/js/waypoints.min.js"></script>
+<script src="https://sangwansahil.github.io/assets/js/jquery.scrollTo.min.js"></script>
+<script src="https://sangwansahil.github.io/assets/js/jquery.localScroll.min.js"></script>
+<script src="https://sangwansahil.github.io/assets/js/jquery.magnific-popup.min.js"></script>
+<script src="https://sangwansahil.github.io/assets/js/validate.js"></script>
+<script src="https://sangwansahil.github.io/assets/js/common.js"></script>
+</body>
+</html>
