--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 					Eye for you. 
 				</p>
 				<p>
-					<a href="#" class="btn btn-default btn-lg wow fadeInLeft" role="button"> About </a> &nbsp; <a href="#" class="btn btn-default btn-lg wow fadeInRight" role="button">Research</a>
+					<a href="about.html" class="btn btn-default btn-lg wow fadeInLeft" role="button"> About </a> &nbsp; <a href="#" class="btn btn-default btn-lg wow fadeInRight" role="button">Research</a>
 				</p>
 			</div>
 		</div>
