--- a/research.html
+++ b/research.html
@@ -86,7 +86,7 @@
 					<h3 class="section-title">CLinical Trials and Research Grants</h3>
 					<p class="lead">
 					<hr>
-					1.<b>	Optics of the growing Crystalline Lens</b>. ROI Grant from NIH.
+					1.<b><p>	Optics of the growing Crystalline Lens</b>. ROI Grant from NIH.</p>
 					<p>Fabrice Manns, Project Director (PI), Authur Ho, Jean-Marie Parel, Sonia H Yoo, Craig A, Mckeown, Giovanni Gregori, Robert Augusteyn, <b>Virender S Sangwan</b>, Mukesh Taneja.</p>
 
 					<p>Period : Two years (june 2012 – May 31, 2014)</p>
@@ -95,7 +95,7 @@
 
 					<p>Total : 46,690 $ Per annum.</p>
 					<hr>
-					2.Programme for the promotion of scientific international collaboration of Consejo Superior de InvestigacionesCientificas (CSIC), Spain with foreign institutions.
+					2.<p>Programme for the promotion of scientific international collaboration of Consejo Superior de InvestigacionesCientificas (CSIC), Spain with foreign institutions.</p>
 					<p><b>Project: Towards a tru restoration of accommodation (Project code : i-LINK 609).</b></p>
 
 					<p>Period : 2013 – 2014.</p>
@@ -109,9 +109,9 @@
 
 					<p>Virender S Sangwan (PI), May Griffith (Co-PI), D Balasubramanian (Co-I), Indumathi Mariappan (Co-I), Sayan Basu (Co-I), Lal Dave (Industry Partner), Per Fagerholm (Co-I), Jaywant Phopase (Co-I), Urban Hoglund (Co-I).</p>
 					<hr>
-					4. <b>Centre for Ocular Regeneration (CORE), one Crore grant from Chairman, Dr G N Rao to establish “CORE"</b>
+					4. <p><b>Centre for Ocular Regeneration (CORE), one Crore grant from Chairman, Dr G N Rao to establish “CORE"</b></p>
 					<hr>
-					5. <b>Exploring the application of pluripotent and adult stem cells in the treatment of retinal and corneal disorders.</b>
+					5. <p><b>Exploring the application of pluripotent and adult stem cells in the treatment of retinal and corneal disorders.</b></p>
 					<p>Indumati Mariappan, Subhadra Jalali,<b> Virender S Sangwan (Co-PI)</b>, Sayan Basu, D Balasubramanian.</p>
 
 					<p>Period : 2013 (5years)</p>
@@ -128,7 +128,7 @@
 
 					<p><b>Year : 2009 – 2014 July</b></p>
 					<hr>
-					7.<b> Title of the project</b>: Champaulimaud Transplational Centre for Eye Research (C TRACER).
+					7.<p><b> Title of the project</b>: Champaulimaud Transplational Centre for Eye Research (C TRACER).</p>
 					<p><b>PI </b>: Geeta K Vemuganti, Virender S Sangwan, D Balasubramanian, Chitra Kannabiran, Subhabrata Chakrabarti, Inderjeet Kaur.</p>
 
 					<p><b>Awarding Agency : Champaulimaud Foundation</b></p>
@@ -137,7 +137,7 @@
 
 					<p><b>Year : 2009 – 2012</b></p>
 					<hr>
-					8.Title of the project : Preservation and use of adult stem cells and the use of biomaterial scaffolds for clinical application.
+					8.<p>Title of the project : Preservation and use of adult stem cells and the use of biomaterial scaffolds for clinical application.</p>
 					<p><b>Awarding Agency : Santos Biosckin Rua Eng, Portugal</b></p>
 
 					<p><b>Amount awarded : 4,18,000 INR</b></p>
@@ -154,7 +154,7 @@
 
 					<p>iii) An Open-label, Prospective, Non-compartive, Single Center Pilot Study to Evaluate the Feasibility of Corneal Onlay in Unsighted Eyes. Virender S Sangwan (PI), Pravin V Krishna (Co-I).</p>
 					<hr>
-					10. <b>Indo-Japanese Grant</b>
+					10. <p><b>Indo-Japanese Grant</b></p>
 					<p>Title : Genetic Studies on Steven Johnson’s Syndrome.</p>
 
 					<p>Chitra Kannabiran – PI (LVPEI); Mayumi Ueta (PI- Japan); Virender S Sangwan Co-PI (LVPEI)</p>
