--- a/publication.html
+++ b/publication.html
@@ -93,7 +93,7 @@
 					        Publications in Peer Reviewed Journals</a>
 					      </h4>
 					    </div>
-					    <div id="collapse1" class="panel-collapse collapse in">
+					    <div id="collapse1" class="panel-collapse collapse">
 					      <div class="panel-body">
 					      	<li style="text-align: left;"><span style="font-size: 14pt;">Jain R, Sharma N, Basu S, Iyer G, Ueta M, Sotozono C, Kannabiran C, Rathi VM, Gupta N, Kinoshita S, Gomes JA, Chodosh J, <strong>Sangwan VS</strong>. <a href="http://www.ncbi.nlm.nih.gov/pubmed/26829569">Stevens-Johnson syndrome: The role of an ophthalmologist</a>. Surv Ophthalmol. <strong>2016 Jul-Aug</strong>; 61(4):369-99. doi: 10.1016/j.survophthal.2016.01.004. Epub 2016 Jan 30. Review.</span></li>
 							</ol>
