Page linking done

--- a/research.html
+++ b/research.html
@@ -55,24 +55,25 @@
 	<nav class="collapse navbar-collapse bs-navbar-collapse navbar-right" role="navigation">
 	<ul class="nav navbar-nav">
 		<li>
-		<a href="#hero">Home</a>
+		<a href="index.html">Home</a>
 		</li>
 		<li>
-		<a href="#about">About</a>
+		<a href="about.html">About</a>
 		</li>
 		<li>
-		<a href="#gallery">Achievements</a>
+		<a href="achievement.html">Achievements</a>
 		</li>
 		<li>
-		<a href="#slider">Research</a>
+		<a href="research.html">Research</a>
 		</li>
 		<li>
-		<a href="#faq">Publications</a>
+		<a href="publication.html">Publications</a>
 		</li>
 		<li>
-		<a href="#contactarea">Contact</a>
+		<a href="">Contact</a>
 		</li>
 	</ul>
+	</nav>
 	</nav>
 </div>
 </header>
