--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 					Eye for you. 
 				</p>
 				<p>
-					<a href="about.html" class="btn btn-default btn-lg wow fadeInLeft" role="button"> About </a> &nbsp; <a href="#" class="btn btn-default btn-lg wow fadeInRight" role="button">Research</a>
+					<a href="about.html" class="btn btn-default btn-lg wow fadeInLeft" role="button"> About </a> &nbsp; <a href="research.html" class="btn btn-default btn-lg wow fadeInRight" role="button">Research</a>
 				</p>
 			</div>
 		</div>
@@ -131,7 +131,7 @@
 			</div>
 			<div class="col-md-4 col-sm-6">
 				<div class="service-box wow zoomIn" data-wow-duration="1.5s" data-wow-delay="0.1s">
-					<img src="C:/Users/Sahil/Downloads/Run Charity Lite Free Website Template - Free-CSS.com/run-charity-lite/theme-runcharity/Photo4.jpg" alt="">
+					<img src="Photo4.jpg" alt="">
 					<h3>Designation</h3>
 					<div class="text-left">
 						<p>
@@ -248,7 +248,8 @@
 				</a>
 			</div>
 			<div class="col-md-4">
-				<a href="https://ununsplash.imgix.net/photo-1429277096327-11ee3b761c93?fit=crop&amp;fm=jpg&amp;h=700&amp;q=75&amp;w=1050" title="This is the description">
+				<a href="https://ununsplash.imgix.net/photo-1429277096327-11ee3b761c93?fit=crop&amp;fm=jpg&amp;h=700&amp;q=75&amp;w=1050" title="This is the 
+				description">
 				<img src="https://ununsplash.imgix.net/photo-1429277096327-11ee3b761c93?fit=crop&amp;fm=jpg&amp;h=700&amp;q=75&amp;w=1050" alt="" class="image-responsive">
 					<div class="description">
 						<span class="caption">Running <b>miles</b></span> 
