--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
 			</div>
 			<div class="col-md-4 col-sm-6">
 				<div class="service-box wow zoomIn" data-wow-duration="1.5s" data-wow-delay="0.1s">
-					<img src="Photo4.jpg" alt="">
+					<img src="https://sangwansahil.github.io/Photo4.jpg" alt="">
 					<h3>Designation</h3>
 					<div class="text-left">
 						<p>
@@ -147,7 +147,7 @@
 							Director, Center for Ocular Regeneration (CORE).
 						</p>
 						<p class="text-center">
-							<button type="button" class="btn btn-info btn-md"><a href="#">Research and publications</a></button>
+							<button type="button" class="btn btn-info btn-md"><a href="research.html">View Research</a></button>
 						</p>
 					</div>
 				</div>
@@ -159,7 +159,7 @@
 					<p>
 						Uveitis & Ocular Immunology
 					</p>
-					<button type="button" class="btn btn-info btn-md"><a href="#">View Publications</a></button>
+					<button type="button" class="btn btn-info btn-md"><a href="publication.html">View Publications</a></button>
 				</div>
 			</div>
 			<div class="col-md-4 col-sm-6">
@@ -168,7 +168,7 @@
 					<p>
 						Cornea & Anterior Segment
 					</p>
-					<button type="button" class="btn btn-info btn-md"><a href="#">View Publications</a></button>
+					<button type="button" class="btn btn-info btn-md"><a href="publication.html">View Publications</a></button>
 				</div>
 			</div>
 			<div class="col-md-4 col-sm-6">
@@ -177,7 +177,7 @@
 					<p>
 						Stem Cells
 					</p>
-					<button type="button" class="btn btn-info btn-md"><a href="#">View Publications</a></button>
+					<button type="button" class="btn btn-info btn-md"><a href="publication.html">View Publications</a></button>
 				</div>
 			</div>
 			<div class="col-md-4 col-sm-6">
@@ -186,7 +186,7 @@
 					<p>
 						Cataract
 					</p>
-					<button type="button" class="btn btn-info btn-md"><a href="#">View Publications</a></button>
+					<button type="button" class="btn btn-info btn-md"><a href="publication.html">View Publications</a></button>
 				</div>
 			</div>
 		</div>
@@ -216,7 +216,7 @@
 	================================================== -->
 <section id="gallery" class="parallax section" style="">
 <div class="wrapsection">
-	<div class="parallax-overlay" style="background-color:#00c1c1;opacity:0.9;"></div>
+	<div class="parallax-overlay" style="background-color:white;"></div>
 	<div class="container">
 		<div class="row">
 			<div class="col-md-12 sol-sm-12">
@@ -227,66 +227,22 @@
 			</div>
 			
 			<div class="col-md-4">
-				<a href="https://www.youtube.com/watch?v=fjC2fMmrHH8">
-					<img src="" class="img-responsive">
-					<div class="description">
-						<span class="caption">Talk at The Inclusion Summit
-						</span> 
-						<span class="camera"><i class="fa fa-camera"></i></span>
-						<div class="clearfix"></div>
-					</div>			
-				</a>
+				<iframe src="https://youtu.be/fjC2fMmrHH8" style="border:2px solid grey;"></iframe>
 			</div>
 			<div class="col-md-4">
-				<a href="https://unsplash.imgix.net/uploads/14115408840644deb16b0/2dc933e3?fit=crop&amp;fm=jpg&amp;h=700&amp;q=75&amp;w=1050" title="This is the description">
-				<img src="https://unsplash.imgix.net/uploads/14115408840644deb16b0/2dc933e3?fit=crop&amp;fm=jpg&amp;h=700&amp;q=75&amp;w=1050" alt="" class="image-responsive">
-					<div class="description">
-						<span class="caption">Great <b>marathon</b></span> 
-						<span class="camera"><i class="fa fa-link"></i></span>
-						<div class="clearfix"></div>
-					</div>
-				</a>
+				<iframe src="https://youtu.be/B9UxSOv3wuU" style="border:2px solid grey;"></iframe>
 			</div>
 			<div class="col-md-4">
-				<a href="https://ununsplash.imgix.net/photo-1429277096327-11ee3b761c93?fit=crop&amp;fm=jpg&amp;h=700&amp;q=75&amp;w=1050" title="This is the 
-				description">
-				<img src="https://ununsplash.imgix.net/photo-1429277096327-11ee3b761c93?fit=crop&amp;fm=jpg&amp;h=700&amp;q=75&amp;w=1050" alt="" class="image-responsive">
-					<div class="description">
-						<span class="caption">Running <b>miles</b></span> 
-						<span class="camera"><i class="fa fa-heart"></i></span>
-						<div class="clearfix"></div>
-					</div>
-				</a>
+				<iframe src="https://youtu.be/iY1Mt86Is3c" style="border:2px solid grey;"></iframe>
 			</div>
 			<div class="col-md-4">
-				<a href="https://unsplash.imgix.net/uploads/141327328038701afeede/eda0fb7c?fit=crop&amp;fm=jpg&amp;h=700&amp;q=75&amp;w=1050" title="This is the description">
-				<img src="https://unsplash.imgix.net/uploads/141327328038701afeede/eda0fb7c?fit=crop&amp;fm=jpg&amp;h=700&amp;q=75&amp;w=1050" alt="" class="image-responsive">
-					<div class="description">
-						<span class="caption">Young <b>volunteers</b></span> 
-						<span class="camera"><i class="fa fa-tachometer"></i></span>
-						<div class="clearfix"></div>
-					</div>
-				</a>
+				<iframe src="https://youtu.be/dqHQLoQ0t8M" style="border:2px solid grey;"></iframe>
 			</div>
 			<div class="col-md-4">
-				<a href="https://ununsplash.imgix.net/photo-1418225043143-90858d2301b4?fit=crop&amp;fm=jpg&amp;h=700&amp;q=75&amp;w=1050" title="This is the description">
-				<img src="https://ununsplash.imgix.net/photo-1418225043143-90858d2301b4?fit=crop&amp;fm=jpg&amp;h=700&amp;q=75&amp;w=1050" alt="" class="image-responsive">
-					<div class="description">
-						<span class="caption">Charity <b>concerts</b></span> 
-						<span class="camera"><i class="fa fa-microphone"></i></span>
-						<div class="clearfix"></div>
-					</div>
-				</a>
+				<iframe src="https://youtu.be/BETomMIjTck" style="border:2px solid grey;"></iframe>
 			</div>
 			<div class="col-md-4">
-				<a href="https://unsplash.imgix.net/photo-1428908799722-0a74e26ce7f6?fit=crop&amp;fm=jpg&amp;h=700&amp;q=75&amp;w=1050" title="This is the description">
-				<img src="https://unsplash.imgix.net/photo-1428908799722-0a74e26ce7f6?fit=crop&amp;fm=jpg&amp;h=700&amp;q=75&amp;w=1050" alt="" class="image-responsive">
-					<div class="description">
-						<span class="caption">Generous <b>sponsors</b></span> 
-						<span class="camera"><i class="fa fa-coffee"></i></span>
-						<div class="clearfix"></div>
-					</div>
-				</a>
+				<iframe src="hhttps://youtu.be/ZyZR5Ld6uBc" style="border:2px solid grey;"></iframe>
 			</div>
 		</div>
 	</div>
@@ -294,7 +250,7 @@
 </section>
 <!-- Text Carousel
 	================================================== -->
-<section id="slider" class="parallax section" style="background-image: url(http://themepush.com/demo/runcharity/assets/img/4.jpg);">
+<section id="slider" class="parallax section" style="background-color:black">
 <div class="wrapsection">
 	<div class="container">
 		<div class="row">
