--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
 </section>
 <!-- Gallery
 	================================================== -->
-<section id="gallery" class="parallax section" style="">
+<section id="gallery" class="" style="">
 <div class="wrapsection">
 	<div class="parallax-overlay" style="background-color:white;"></div>
 	<div class="container">
@@ -227,23 +227,22 @@
 			</div>
 			
 			<div class="col-md-4">
-				<iframe src="https://youtu.be/fjC2fMmrHH8" style="border:2px solid grey;"></iframe>
+				<iframe width="560" height="315" src="https://www.youtube.com/embed/fjC2fMmrHH8" frameborder="0" allowfullscreen></iframe>
 			</div>
 			<div class="col-md-4">
-				<iframe src="https://youtu.be/B9UxSOv3wuU" style="border:2px solid grey;"></iframe>
+				<iframe width="560" height="315" src="https://www.youtube.com/embed/B9UxSOv3wuU" frameborder="0" allowfullscreen></iframe>
 			</div>
 			<div class="col-md-4">
-				<iframe src="https://youtu.be/iY1Mt86Is3c" style="border:2px solid grey;"></iframe>
+				<iframe width="560" height="315" src="https://www.youtube.com/embed/iY1Mt86Is3c" frameborder="0" allowfullscreen></iframe>
 			</div>
 			<div class="col-md-4">
-				<iframe src="https://youtu.be/dqHQLoQ0t8M" style="border:2px solid grey;"></iframe>
+				<iframe width="560" height="315" src="https://www.youtube.com/embed/dqHQLoQ0t8M" frameborder="0" allowfullscreen></iframe>
 			</div>
 			<div class="col-md-4">
-				<iframe src="https://youtu.be/BETomMIjTck" style="border:2px solid grey;"></iframe>
+				<iframe width="560" height="315" src="https://www.youtube.com/embed/BETomMIjTck" frameborder="0" allowfullscreen></iframe>
 			</div>
 			<div class="col-md-4">
-				<iframe src="hhttps://youtu.be/ZyZR5Ld6uBc" style="border:2px solid grey;"></iframe>
-			</div>
+				<iframe width="560" height="315" src="https://www.youtube.com/embed/ZyZR5Ld6uBc" frameborder="0" allowfullscreen></iframe>
 		</div>
 	</div>
 </div>
@@ -299,233 +298,7 @@
 	</div>
 </div>
 </section>
-<!-- FAQ
-	================================================== -->
-<section id="faq" class="section">
-<div class="wrapsection">
-	<div class="container">
-		<div class="row">
-			<div class="col-md-12 sol-sm-12">
-				<div class="maintitle">
-					<h3 class="section-title">Conditions of <span class="wow bounceInRight">Participation</span></h3>
-					<p class="lead">
-						Sed gravida, tortor in tincidunt sagittis, ligula lacus ultrices justo, sed mattis sem sem ut ex. Ut nunc elit, auctor et quam sit amet, convallis purus.
-					</p>
-				</div>
-			</div>
-		</div>
-		<div class="row">
-			<div class="col-md-4 col-sm-12">
-				<div class="faq-block wow bounceInDown" data-wow-duration="1.5s" data-wow-delay="0s">
-					<div class="panel-group">
-						<div class="panel panel-default">
-							<div class="panel-heading">
-								<h4 class="panel-title">
-								<a data-toggle="collapse" data-parent="#accordion" href="#collapseOne">
-								How old can I be? </a>
-								</h4>
-							</div>
-							<div id="collapseOne" class="panel-collapse collapse">
-								<div class="panel-body">
-									 How old. This is the detailed answer. It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.
-								</div>
-							</div>
-						</div>
-						<div class="panel panel-default">
-							<div class="panel-heading">
-								<h4 class="panel-title">
-								<a data-toggle="collapse" data-parent="#accordion" href="#collapseTwo">
-								Can we donate clothes? </a>
-								</h4>
-							</div>
-							<div id="collapseTwo" class="panel-collapse collapse">
-								<div class="panel-body">
-									 Can we? This is the detailed answer. It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.
-								</div>
-							</div>
-						</div>
-						<div class="panel panel-default">
-							<div class="panel-heading">
-								<h4 class="panel-title">
-								<a data-toggle="collapse" data-parent="#accordion" href="#collapseThree">
-								How many miles to run ? </a>
-								</h4>
-							</div>
-							<div id="collapseThree" class="panel-collapse collapse">
-								<div class="panel-body">
-									 So how many. This is the detailed answer. It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.
-								</div>
-							</div>
-						</div>
-					</div>
-				</div>
-			</div>
-			<div class="col-md-4 col-sm-12">
-				<div class="faq-block wow bounceInDown" data-wow-duration="1.5s" data-wow-delay="0.1s">
-					<div class="panel-group">
-						<div class="panel panel-default">
-							<div class="panel-heading">
-								<h4 class="panel-title">
-								<a data-toggle="collapse" data-parent="#accordion" href="#collapseFour">
-								Can we show sponsors? </a>
-								</h4>
-							</div>
-							<div id="collapseFour" class="panel-collapse collapse">
-								<div class="panel-body">
-									 Sponsors. This is the detailed answer. It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.
-								</div>
-							</div>
-						</div>
-						<div class="panel panel-default">
-							<div class="panel-heading">
-								<h4 class="panel-title">
-								<a data-toggle="collapse" data-parent="#accordion" href="#collapseFive">
-								Are there free drinks? </a>
-								</h4>
-							</div>
-							<div id="collapseFive" class="panel-collapse collapse">
-								<div class="panel-body">
-									 Drinks. This is the detailed answer. It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.
-								</div>
-							</div>
-						</div>
-						<div class="panel panel-default">
-							<div class="panel-heading">
-								<h4 class="panel-title">
-								<a data-toggle="collapse" data-parent="#accordion" href="#collapseSix">
-								Is medical exam free ? </a>
-								</h4>
-							</div>
-							<div id="collapseSix" class="panel-collapse collapse">
-								<div class="panel-body">
-									 Medical. This is the detailed answer. It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.
-								</div>
-							</div>
-						</div>
-					</div>
-				</div>
-			</div>
-			<div class="col-md-4 col-sm-12">
-				<div class="faq-block wow bounceInDown" data-wow-duration="1.5s" data-wow-delay="0.2s">
-					<div class="panel-group">
-						<div class="panel panel-default">
-							<div class="panel-heading">
-								<h4 class="panel-title">
-								<a data-toggle="collapse" data-parent="#accordion" href="#collapseSeven">
-								Do you help with passport? </a>
-								</h4>
-							</div>
-							<div id="collapseSeven" class="panel-collapse collapse">
-								<div class="panel-body">
-									 Passport. This is the detailed answer. It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.
-								</div>
-							</div>
-						</div>
-						<div class="panel panel-default">
-							<div class="panel-heading">
-								<h4 class="panel-title">
-								<a data-toggle="collapse" data-parent="#accordion" href="#collapseEight">
-								What routes should one follow? </a>
-								</h4>
-							</div>
-							<div id="collapseEight" class="panel-collapse collapse">
-								<div class="panel-body">
-									 Routes. This is the detailed answer. It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.
-								</div>
-							</div>
-						</div>
-						<div class="panel panel-default">
-							<div class="panel-heading">
-								<h4 class="panel-title">
-								<a data-toggle="collapse" data-parent="#accordion" href="#collapseNine">
-								Do I have to pay a tax? </a>
-								</h4>
-							</div>
-							<div id="collapseNine" class="panel-collapse collapse">
-								<div class="panel-body">
-									 Tax. This is the detailed answer. It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.
-								</div>
-							</div>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
-	</div>
-</div>
-</section>
-<!-- Random
-	================================================== -->
-<section class="whitecolor parallax section" style="background-image: url(http://themepush.com/demo/runcharity/assets/img/5.jpg);">
-<div class="wrapsection">
-	<div class="container">
-	<div class="row">
-		<div class="col-md-12 sol-sm-12">
-			<div class="maintitle">
-				<h3 class="section-title justtitle">Charity <span class="wow flipInX">&amp; love</span> are the same</h3>
-				<p class="lead bottom0">
-					 Fusce fermentum lectus id turpis suscipit, ut egestas magna volutpat. Donec a purus tellus. Nunc ut dolor eu est gravida auctor quis vitae.
-				</p>
-			</div>
-		</div>
-	</div>
-	</div>
-</div>
-</section>
-<!-- Contact
-	================================================== -->
-<section id="contactarea" class="parallax section" style="background-image: url(http://themepush.com/demo/runcharity/assets/img/map.png);">
-<div class="wrapsection">
-	<div class="parallax-overlay" style="background-color: #1cbb9b;opacity:0.95;"></div>
-	<div class="container">
-		<div class="row">
-			<div class="col-md-12">
-				<div class="maintitle">
-					<h3 class="section-title">Get in Touch</h3>
-					<p class="lead">
-						If you have questions about our events, don't hesitate to send us your message. This is a real working contact form, test it!
-					</p>
-				</div>
-				<form id="contact" name="contact" method="post" class="text-left">
-					<fieldset>
-						<div class="row">
-							<div class="col-md-4 wow fadeIn animated animated" data-wow-delay="0.1s" data-wow-duration="2s">
-								<label for="name">Name<span class="required">*</span></label>
-								<input type="text" name="name" id="name" size="30" value="" required/>
-							</div>
-							<div class="col-md-4 wow fadeIn animated" data-wow-delay="0.3s" data-wow-duration="2s">
-								<label for="email">Email<span class="required">*</span></label>
-								<input type="text" name="email" id="email" size="30" value="" required/>
-							</div>
-							<div class="col-md-4 wow fadeIn animated" data-wow-delay="0.3s" data-wow-duration="2s">
-								<label for="phone">Phone</label>
-								<input type="text" name="phone" id="phone" size="30" value=""/>
-							</div>
-						</div>
-						<div class="wow fadeIn animated" data-wow-delay="0.3s" data-wow-duration="1.5" style="margin-top:15px;">
-							<label for="message">Message<span class="required">*</span></label>
-							<textarea name="message" id="message" required></textarea>
-						</div>
-						<div class="wow fadeIn animated" data-wow-delay="0.3" data-wow-duration="1.5s">
-							<input id="submit" type="submit" name="submit" value="Send"/>
-						</div>
-					</fieldset>
-				</form>
-				<div id="success">		
-					<p class="contactalert">
-						Your message was sent succssfully! I will be in touch as soon as I can.
-					</p>			
-				</div>
-				<div id="error">			
-					<p class="contactalert">
-						 Something went wrong, try refreshing and submitting the form again.
-					</p>			
-				</div>
-			</div>
-		</div>
-	</div>
-</div>
-</section>
+
 <!-- Credits 
 =============================================== -->
 <section id="credits" class="text-center">
