--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
 			<div class="maintitle">
 				<h3 class="section-title justtitle" >About</h3>
 				<p class="lead bottom0" style="">
-					 Dr Virender Singh Sangwan is the Head Cornea & Anterior Segment in LV Prasad Eye Institute(LVPEI),Banjara Hills’ Hyderabad-500034. He is the receipent of year 2006’s Shanti Swarup Bhatnagar Award (SSB) in Medical Sciences. Virender Singh Sangwan completed his medical graduate degree from Maharshi Dayanand University, Haryana, in 1986 and MS Ophthalmology in 1991. He did a fellowship in Cornea & Anterior Segment at L V Prasad Eye Institute, and another in Immunology & Uveitis Services at Harvard Medical School, USA. Now he is Director of Cornea & Anterior Segment, Ocular Immunology & Uveitis Services at L V Prasad Eye Institute, Hyderabad. He is also Adjunct Associate Professor of Ophthalmology, University of Rochester, New York, USA.
+					 Dr Virender Singh Sangwan is the Head Cornea & Anterior Segment in LV Prasad Eye Institute(LVPEI),Banjara Hills’ Hyderabad-500034. He is the recepient of year 2006’s Shanti Swarup Bhatnagar Award (SSB) in Medical Sciences. Virender Singh Sangwan completed his medical graduate degree from Maharshi Dayanand University, Haryana, in 1986 and MS Ophthalmology in 1991. He did a fellowship in Cornea & Anterior Segment at L V Prasad Eye Institute, and another in Immunology & Uveitis Services at Harvard Medical School, USA. Now he is Director of Cornea & Anterior Segment, Ocular Immunology & Uveitis Services at L V Prasad Eye Institute, Hyderabad. He is also Adjunct Associate Professor of Ophthalmology, University of Rochester, New York, USA.
 					 <a href="about.html" style="color: grey;">Read More..</a>
 				</p>
 			</div>
@@ -212,7 +212,7 @@
 	</div>
 	</div>
 </section>
-<!-- Gallery
+<!-Gallery
 	================================================== -->
 <section id="gallery" class="" style="">
 <div class="wrapsection">
@@ -221,28 +221,28 @@
 		<div class="row">
 			<div class="col-md-12 sol-sm-12">
 				<div class="maintitle">
-					<h3 class="section-title">Talks</h3>
+					<h3 class="section-title" style="color: grey;">Talks</h3>
 					
 				</div>
 			</div>
 			
 			<div class="col-md-4">
-				<iframe width="560" height="315" src="https://www.youtube.com/embed/fjC2fMmrHH8" frameborder="0" allowfullscreen></iframe>
+				<iframe width="1200" height="675" src="https://www.youtube.com/embed/fjC2fMmrHH8" frameborder="0" allowfullscreen></iframe>
 			</div>
 			<div class="col-md-4">
-				<iframe width="560" height="315" src="https://www.youtube.com/embed/B9UxSOv3wuU" frameborder="0" allowfullscreen></iframe>
+				<iframe width="1200" height="675" src="https://www.youtube.com/embed/B9UxSOv3wuU" frameborder="0" allowfullscreen></iframe>
 			</div>
 			<div class="col-md-4">
-				<iframe width="560" height="315" src="https://www.youtube.com/embed/iY1Mt86Is3c" frameborder="0" allowfullscreen></iframe>
+				<iframe width="1200" height="675" src="https://www.youtube.com/embed/iY1Mt86Is3c" frameborder="0" allowfullscreen></iframe>
 			</div>
 			<div class="col-md-4">
-				<iframe width="560" height="315" src="https://www.youtube.com/embed/dqHQLoQ0t8M" frameborder="0" allowfullscreen></iframe>
+				<iframe width="1200" height="675" src="https://www.youtube.com/embed/dqHQLoQ0t8M" frameborder="0" allowfullscreen></iframe>
 			</div>
 			<div class="col-md-4">
-				<iframe width="560" height="315" src="https://www.youtube.com/embed/BETomMIjTck" frameborder="0" allowfullscreen></iframe>
+				<iframe width="1200" height="675" src="https://www.youtube.com/embed/BETomMIjTck" frameborder="0" allowfullscreen></iframe>
 			</div>
 			<div class="col-md-4">
-				<iframe width="560" height="315" src="https://www.youtube.com/embed/ZyZR5Ld6uBc" frameborder="0" allowfullscreen></iframe>
+				<iframe width="1200" height="675" src="https://www.youtube.com/embed/ZyZR5Ld6uBc" frameborder="0" allowfullscreen></iframe>
 		</div>
 	</div>
 </div>
