--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 </section>
 <!-- About
 	================================================== -->
-<section class="whitecolor parallax section" id="about" style="background-color: #01b0d1;opacity:1;>
+<section class="whitecolor parallax section" id="about" style="background-color: #01b0d1;opacity:0.9;>
  <div class="wrapsection">
 	<div class="container">
 	<div class="row">
@@ -117,7 +117,7 @@
 
 <section id="" class="parallax section" style="">
 <div class="wrapsection">
-	<div class="parallax-overlay" style="background-color:#00c1c1;opacity:0.9;"></div>
+	<div class="parallax-overlay" style="background-color:#00c1c1;opacity:1;"></div>
 	<div class="container">
 		<div class="row">
 			<div class="col-md-12">
@@ -264,25 +264,25 @@
 						<div class="item active">
 							<blockquote>
 								<p class="lead">
-									You have not lived today until you have done something for someone who can never repay you.
+									Medical Societies membership.
 								</p>
-								<small>John Bunyan, Marathon</small>
+								<small><a href="advisory.html">See more</a></small>
 							</blockquote>
 						</div>
 						<div class="item">
 							<blockquote>
 								<p class="lead">
-									The simplest acts of kindness are by far more powerful then a thousand heads bowing in prayer.
+									Member of Advisory Board/Society Appointment.
 								</p>
-								<small>Mahatma Gandhi</small>
+								<small><a href="advisory.html">See more</a></small>
 							</blockquote>
 						</div>
 						<div class="item">
 							<blockquote>
 								<p class="lead">
-									There is no exercise better for the heart than reaching down and lifting people up.
+									Honorary Positions.
 								</p>
-								<small>John Holmes, Organizer</small>
+								<small><a href="advisory.html">See more</a></small>
 							</blockquote>
 						</div>
 					</div>
@@ -310,8 +310,8 @@
 	<a href="#"><i class="fa fa-pinterest"></i></a>
 	<a href="#"><i class="fa fa-google-plus"></i></a>
 	</span><br/>
-	Copyright &copy; <a href="#">Your Agency</a> 
-	<br/>Template By <i class="fa fa-heart"></i> WowThemes.Net
+	Virender Sangwan &copy; 
+	<br/>
 </section>
 <!-- Bootstrap core JavaScript
 	================================================== -->
